--- a/style/style.css
+++ b/style/style.css
@@ -1,23 +1,27 @@
 .search-bar {
-    margin: 20px;
-    width: 100%;
+  margin: 20px;
+  text-align: center;
 }
 
-.search-bar img {
-    max-width: 64px;
+.search-bar input {
+  width: 75%;
+}
+
+.video-item img {
+  max-width: 64px;
 }
 
 .video-detail .details {
-    margin-top: 10px;
-    padding: 10px;
-    border: 1px solid #DDD;
-    border-radius: 4px;
+  margin-top: 10px;
+  padding: 10px;
+  border 1px solid #DDD;
+  border-radius: 4px;
 }
 
 .list-group-item {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.list-group-item:hover {
-    background-color: #EEE;
+.list-group-item:hover{
+  background-color: #EEE;
 }
